--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,7 @@ environment:
   sdk: ">=2.1.0 <3.0.0"
 
 dependencies:
+  hasura_connect: ^1.1.2
   cupertino_icons: ^0.1.2
   font_awesome_flutter: ^8.5.0
   flutter_swiper: ^1.1.6
