--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,7 @@ environment:
   sdk: ">=2.1.0 <3.0.0"
 
 dependencies:
+  shared_preferences: ^0.5.7+1
   firebase_auth: ^0.16.0
   hasura_connect: ^1.1.2
   cupertino_icons: ^0.1.2
