--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,7 +36,7 @@ dependencies:
     git: https://github.com/Bwolfs2/find_dropdown.git
   scoped_model: ^1.0.1
   google_sign_in: ^4.5.1
- # flutter_facebook_auth: ^0.2.3
+  flutter_facebook_auth: ^0.2.3
  # flutter_facebook_login: ^3.0.0
   flutter:
     sdk: flutter
@@ -69,12 +69,7 @@ flutter:
   #  - images/a_dot_burr.jpeg
   #  - images/a_dot_ham.jpeg
   assets:
-    - images/logo.png
     - images/logo2.png
-    - images/imagemfundo.jpg
-    - images/fundo.png
-    - images/lays.jpg
-    - images/icon-caixa.png
     - images/notimage.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
