--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,9 +24,9 @@ dependencies:
   font_awesome_flutter: ^8.5.0
   flutter_swiper: ^1.1.6
   dio: ^3.0.9
-  flutter_mobx: ^1.1.0
+  flutter_mobx: ^1.1.0+2
   mobx: ^1.1.1
-  flutter_modular: ^1.0.0
+  flutter_modular: ^2.0.1
   build_context: ^1.1.0
   flutter_mobx_helpers:
   intl: ^0.16.1
